@@ -21,6 +21,14 @@
 </tr>
 </table>
 <p>
+2010-02-09  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> Magick++/demo/demo.cpp (main): Split demo output frames into
+        individual files to enable easier viewing.
+
+</UL>
+<p>
 2010-02-08  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
