@@ -1,3 +1,8 @@
+2010-02-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* Magick++/demo/demo.cpp (main): Split demo output frames into
+	individual files to enable easier viewing.
+
 2010-02-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* doc/GraphicsMagick.imdoc: Improve usage synopsis for
